setting up app for Heroku

--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -18,6 +18,11 @@
 
  <p class="messageOne"></p>
  <p class="messageTwo"></p>
+
+ <div>
+  <img src="" alt="icon logo" class="icon-img">
+ </div>
+
  {{>footer}}
 
  <script src="/js/index.js"></script>
